<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Journey.Search"
    android:orientation="vertical">
    <TextView
    android:text="Enter your journey"
    android:layout_marginTop="70dp"
    android:layout_marginLeft="10dp"
    android:textSize="15sp"
    android:layout_width="match_parent"
    android:layout_height="25dp" />
    <AutoCompleteTextView
        android:id="@+id/places"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/grey"
        android:hint="Origin Location"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light" />

    <AutoCompleteTextView
        android:id="@+id/lat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/grey"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"/>

    <AutoCompleteTextView
        android:id="@+id/lon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/grey"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"/>

    <AutoCompleteTextView
        android:id="@+id/places2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:hint="Destination Location"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="@color/grey" />

    <AutoCompleteTextView
        android:id="@+id/lat2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/grey"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"/>

    <AutoCompleteTextView
        android:id="@+id/lon2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:singleLine="true"
        android:background="@drawable/edit_text_style"
        android:textColorHint="@color/grey"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage"
        android:text="@string/button_main"
        android:visibility="visible"
        tools:text="Search" />
    <Button
        android:id="@+id/button_switch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:onClick="Switch"
        android:text="Switch"
        android:visibility="visible"
        tools:text="Switch" />
</LinearLayout>